removed the old gap command to avoid clashing

--- a/css/regions-style.css
+++ b/css/regions-style.css
@@ -88,7 +88,6 @@ body.navbar-is-fixed-top.navbar-administration{
 	background-image: -webkit-linear-gradient(-45deg, #002a5b 0%, #004a8c 41%, #002a5b 100%);
 	background-image: linear-gradient(135deg, #002a5b 0%, #004a8c 41%, #002a5b 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002a5b', endColorstr='#004a8c',GradientType=1 );
-	margin: -4.3em 0 0 0;
 	background-attachment:fixed;
 }
 
